# cppgraph

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  DESIGN.md  HANDOFF.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  TODO.md  pyproject.toml  versions.json
docker/: README.md
docker/build-scip-clang/: Dockerfile  README.md  build.sh  enclosing_range-on-v0.4.0.patch
docker/gen-bindings/: Dockerfile  README.md  gen.sh
docker/index/: Dockerfile  README.md
scripts/: bootstrap.sh  index-in-container.sh  index.sh  measure_tokens.py  register-mcp.sh  reindex.sh  setup.sh  uninstall.sh
src/cppgraph/: __init__.py  builder.py  cli.py  compdb.py  export.py  filters.py  init.py  mcp_server.py  model.py  pipeline.py  prompt.py  scip_introspect.py  setup_cmd.py  store.py  updates.py  viz_html.py
src/cppgraph/proto/: README.md  __init__.py  scip_pb2.py  scip_pb2.pyi
tests/: test_builder.py  test_cli.py  test_compdb.py  test_export.py  test_init.py  test_mcp_server.py  test_model.py  test_pipeline.py  test_prompt.py  test_scip_introspect.py  test_setup_cmd.py  test_store.py  test_updates.py  test_viz_html.py
viz/: README.md  cppgraph-viz.html
