[project]
name = "cppgraph"
version = "0.0.1"
description = "Semantically accurate code-graph for C++ from a compiler index (SCIP)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "protobuf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.10",
]
# The MCP server (Phase 3) is optional: the core build/query CLI works without
# it. Install with `pip install -e .[mcp]` to expose the graph to an LLM.
mcp = [
    "mcp>=1.2",
]

[project.scripts]
cppgraph = "cppgraph.cli:main"
cppgraph-mcp = "cppgraph.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cppgraph"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
extend-exclude = ["src/cppgraph/proto"]  # generated protobuf bindings

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
